5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/3396/executions/1578_1334.log
== TEST (2019-03-11 19:33:42) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", ...)

print("Divisao: ", ...)

print("Resto: ", ...)

print("Potenciacao: ", ...)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  Ellipsis
Divisao:  Ellipsis
Resto:  Ellipsis
Potenciacao:  Ellipsis
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:35:58) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 24//3)

print("Resto: ", 50/7)

print("Potenciacao: ", ...)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  7.142857142857143
Potenciacao:  Ellipsis
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:36:09) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 24//3)

print("Resto: ", 50/8)

print("Potenciacao: ", ...)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  6.25
Potenciacao:  Ellipsis
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:38:19) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", round(24//3, 2)

print("Resto: ", 

print("Potenciacao: ", ...)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:38:29) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", round(24//3, 2)

print("Resto: ", 

print("Potenciacao: ", ...)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:39:34) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", round(24//3, 2)

print("Resto: ", 80/9) 

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 80/9) 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:40:25) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", round(24//3, 2)

print("Resto: ", ) 

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", ) 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:40:26) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", round(24//3, 2)

print("Resto: ", ) 

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", ) 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:40:35) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", round(24//3, 2)

print("Resto: ",...) 

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ",...) 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:43:08) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", round(24//3, 2)

print("Resto: ",25/3) 

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ",25/3) 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:48:39) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", round(24//3, 2)

print("Resto: ",70/3) 

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ",70/3) 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:52:08) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", round(24//3, 2)

print("Resto: ",80/10) 

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ",80/10) 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 18:48:56) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", round(24//3, 2)

print("Resto: ",80/9) 

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ",80/9) 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 18:49:04) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", round(24//3, 2)

print("Resto: ",80/9) 

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ",80/9) 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 18:47:03) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", round(24//3, 2)

print("Resto: ",57//7) 

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ",57//7) 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 18:49:00) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", round(24//3, 2)

print("Resto: ",57/7) 

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ",57/7) 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 19:38:00) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", round(24//3, 2)

print("Resto: ",57/7) 

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ",57/7) 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 19:40:45) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", round(24//3, 2)

print("Resto: ",98/9) 

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ",98/9) 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 20:06:46) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", round(24//3, 2)

print("Resto: ",98//9) 

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ",98//9) 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 20:08:57) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", round(24//3, 2)

print("Resto: ",98%9) 

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ",98%9) 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 20:09:35) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", round(24//3, 2)

print("Resto: ", 98/9) 

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 98/9) 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 21:45:31) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", round(24//3, 2)

print("Resto: ", 80//9) 

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 80//9) 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 13:53:05) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", round(24//3, 2)

print("Resto: ", 16/2) 

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 16/2) 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 13:53:14) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", round(24//3, 2)

print("Resto: ", 16//2) 

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 16//2) 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 13:53:32) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", round(24//3, 2)

print("Resto: ", 16//8) 

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 16//8) 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 13:53:46) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", round(24//3, 2)

print("Resto: ", 16/2) 

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 16/2) 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 13:58:28) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", round(24//3, 2)

print("Resto: ", 16//2) 

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 16//2) 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 13:59:10) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", round(24//3, 2)

print("Resto: ",16//2) 

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ",16//2) 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 14:00:06) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", round(24//3, 2)

print("Resto: ", 4**2//2) 

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 4**2//2) 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 14:00:30) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", round(24//3, 2)

print("Resto: ", 4**2/2) 

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 4**2/2) 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 14:12:54) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", round(24//3, 2)

print("Resto: ",int( 16/2)) 

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ",int( 16/2)) 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 14:13:17) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", round(24//3, 2)

print("Resto: ", 16//2) 

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 16//2) 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 14:13:30) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", round(24//3, 2)

print("Resto: ", 16//3) 

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 16//3) 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 14:22:10) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", round(24//3, 2)

print("Resto: ", 16%2) 

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 16%2) 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 14:22:21) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", round(24//3, 2)

print("Resto: ", 16//2) 

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 16//2) 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 14:22:30) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", round(24//3, 2)

print("Resto: ", 16//2) 

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 16//2) 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 14:22:36) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", round(24//3, 2)

print("Resto: ", 16//2) 

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 16//2) 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 14:22:52) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", round(24//3, 2)

print("Resto: ", 16//2) 

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 16//2) 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 14:23:19) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", round(24//3, 2)

print("Resto: ", 24/3) 

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 24/3) 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 14:23:27) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", round(24//3, 2)

print("Resto: ", 24//3) 

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 24//3) 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 14:23:47) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", round(24//3, 2)

print("Resto: " , 24//3) 

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: " , 24//3) 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 14:28:05) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", round(24//3, 2)

print("Resto:", 16//2)

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto:", 16//2)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 14:29:23) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", round(24//3, 2)

print("Resto:", 2**3)

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto:", 2**3)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 14:30:46) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", round(24//3, 2)

print("Resto:", 33//4)

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto:", 33//4)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 14:31:00) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", round(24//3, 2)

print("Resto: ", 33//4)

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 33//4)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 14:31:09) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", round(24//3, 2)

print("Resto: ", 16//2)

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 16//2)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 15:35:44) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", round(24//3, 2)

print("Resto: ", 58//10)

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 58//10)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 15:36:02) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", round(24//3, 2)

print("Resto: ", 58//10)

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 58//10)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 15:36:17) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", round(24//3, 2)

print("Resto: ", 58//10)

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 58//10)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 15:39:59) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", round(24//3, 2)

print("Resto: ", 58/10)

print("Potenciacao: ", 2**3)
-- EXECUTION TIME:
0.188298
-- ERROR:
  File "/home/codebench/codes/1578/1334/main.py", line 9
    print("Resto: ", 58/10)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 16:10:07) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", round(24//3, 2)

print("Resto: ", 38%10)

print("Potenciacao: ", 2 ** 3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 38%10)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 16:10:35) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", round(24//3, 2)

print("Resto: ", 38/10)

print("Potenciacao: ", 2 ** 3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 38/10)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 16:10:57) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", round(24//3, 2)

print("Resto: ", 38%10)

print("Potenciacao: ", 2 ** 3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 38%10)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 16:11:04) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", round(24//3, 2)

print("Resto: ", 38%10)

print("Potenciacao: ", 2 ** 3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 38%10)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 16:11:13) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", round(24//3, 2)

print("Resto: ", 38%10)

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.131012
-- ERROR:
  File "/home/codebench/codes/1578/1334/main.py", line 9
    print("Resto: ", 38%10)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 16:11:32) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", round(24//3, 2)

print("Resto: ", 38/10)

print("Potenciacao: ", 2 ** 3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 38/10)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 16:11:48) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", round(24//3, 2)

print("Resto:", 38/10)

print("Potenciacao: ", 2 ** 3)
-- ERROR:
File "XXXX", line 9
    print("Resto:", 38/10)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 16:11:56) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", round(24//3, 2)

print("Resto:", 38/10)

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.126537
-- ERROR:
  File "/home/codebench/codes/1578/1334/main.py", line 9
    print("Resto:", 38/10)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 16:24:29) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 2*4)

print("Divisao: ", 24/3)

print("Resto:", 38%10)

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto: 8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 16:24:49) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 2*4)

print("Divisao: ", 24/3)

print("Resto:", 38%10)

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.149558
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto: 8
Potenciacao:  8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 16:28:37) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 2*4)

print("Divisao: ", 24/3)

print("Resto:", 38%10)

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.161247
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto: 8
Potenciacao:  8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
